fix repository url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
-authors = ["lordpipe <lordpipe@protonmail.com>", "Douglas Dwyer <dougmdwyer@hotmail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
+authors = [
+  "lordpipe <lordpipe@protonmail.com>",
+  "Douglas Dwyer <dougmdwyer@hotmail.com>",
+  "Alexandre Bury <alexandre.bury@gmail.com>",
+]
 description = "Binding for the zstd compression library, with the ability to reuse compression contexts."
 documentation = "https://docs.rs/zstd-reusectx"
 keywords = ["zstd", "zstandard", "compression"]
 categories = ["compression", "api-bindings"]
 license = "MIT"
 name = "zstd-reusectx"
-repository = "https://github.com/lordofpipes/zstd-rs"
-version = "0.15.0"
+repository = "https://github.com/lordofpipes/zstd-reusectx"
+version = "0.15.1"
 exclude = ["assets/*.zst", "/.github"]
 readme = "Readme.md"
 edition = "2018"
@@ -17,10 +21,12 @@ rust-version = "1.64"
 features = ["experimental", "zstdmt", "zdict_builder", "doc-cfg"]
 
 [dependencies]
-zstd-safe = { path = "zstd-safe", version = "7.0.0", default-features = false, features = ["std"] }
+zstd-safe = { path = "zstd-safe", version = "7.0.0", default-features = false, features = [
+  "std",
+] }
 
 [dev-dependencies]
-clap = {version = "4.0", features=["derive"]}
+clap = { version = "4.0", features = ["derive"] }
 humansize = "2.0"
 partial-io = "0.5"
 walkdir = "2.2"
